--- a/src/global.css
+++ b/src/global.css
@@ -7,7 +7,6 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-	background-color: lightgray
 }
 
 /* BASIC LAYOUT CLASSES */
@@ -51,25 +50,29 @@ button {
 	cursor: pointer;
 }
 
+
+
 .main-container {
 	height: 100vh;
 	width: 100vw;
 }
 
 main {
-	border: 1px solid white;
+	border: 1px solid lightgray;
 	color: gray;
 	padding: 5%;
+
 }
 
 .make {
-	border: 1px solid white;
 	height: 200px;
 	width: 600px;
 	max-width: 800px;
 	max-height: 30vh;
 	border-radius: 20px;
 	padding: 20px;
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+
 }
 
 input {
@@ -96,6 +99,13 @@ input {
 	border-radius: 10px;
 }
 
+.save-btn:hover {
+	height: 40px;
+	border: 3px dashed gray;
+	padding: 10px 20px;
+	border-radius: 10px;
+}
+
 h1 {
 	color: black;
 }
@@ -111,14 +121,15 @@ h1 {
 
 .sub-container {
 	width: 33%;
+
 }
 
 .sub-container:first-child {
-	border-right: 1.5px solid white;
+	border-right: 1.5px solid lightgray;
 }
 
 .sub-container:last-child {
-	border-left: 1.5px solid white;
+	border-left: 1.5px solid lightgray;
 }
 
 .card-container {
@@ -126,40 +137,55 @@ h1 {
 	flex-flow: wrap row;
 	overflow: hidden;
 	overflow-y: visible;
+	padding: 10px
 }
 
 .card {
 	height: 150px;
 	width: auto;
+	min-width: 250px;
 	max-width: 350px;
-	border: 1px solid white;
 	border-radius: 20px;
 	padding: 10px;
-	margin: 10px 10px;
+	margin: 20px 10px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card:hover {
+	box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 p {
 	color: black;
 }
 
+
+
 .done-btn {
 	padding: 8px 12px;
-	background-color: rgb(131, 234, 131);
+	background-color: rgb(157, 232, 157);
+	border: 1px solid gray;
+	border-radius: 10px;
+	margin: 0 5px
 }
 
 .delete-btn {
 	padding: 8px 12px;
-	border-radius: 0 10px 10px 0;
-	background-color: rgb(245, 127, 127);
+	border: 1px solid gray;
+	background-color: rgb(245, 152, 152);
+	border-radius: 10px;
+	margin: 0 5px
 }
 
 .pending-btn {
 	padding: 8px 12px;
-	border-radius: 10px 0 0 10px;
-	background-color: rgb(138, 160, 235);
+	border: 1px solid gray;
+	background-color: rgb(172, 188, 243);
+	border-radius: 10px;
+	margin: 0 5px
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 	.buttons {
 		display: flex;
 		flex-direction: column-reverse;
